# autogen-ui

./: .gitignore  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml
autogenui/: cli.py  datamodel.py  flow.py  manager.py  provider.py  utils.py  version.py
autogenui/datamodel/: __init__.py  app.py  web.py
autogenui/web/: app.py
autogenui/web/ui/: 404.html  index.html  index.txt  playground.html  playground.txt
autogenui/web/ui/_next/static/chunks/: 142-308aa924eeec8ab0.js  142-d053ddd1e2f2401e.js  173-ea00b662234888bb.js  300-09152972163f6571.js  300-f6cae13f8517bd97.js  302-63adfc4f0e89f520.js  472-f339164c55cba059.js  526-97b1d5f8ac1d6997.js  689-fb905c9362567d48.js  731-ec4b86e5892baa22.js  900-4a297f6319ba0e81.js  900-6c6c8ddd0c9d4349.js  91-6c667fb58142bf97.js  980-bac0f64d01ae118c.js  (+16 more)
frontend/: .gitignore  .sample.env.development  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  loading.tsx  navbar.tsx  page.tsx
frontend/app/playground/: flow.tsx  page.tsx
frontend/components/chat/: chatsidebar.tsx  chatview.tsx
frontend/components/nodes/: agent.tsx  chatview.tsx
frontend/src/app/: globals.css  layout.tsx  nav.tsx  navbar.tsx  page.tsx
frontend/src/app/playground/: flow.tsx  page.tsx
frontend/src/components/: markdown.tsx  types.ts  utils.ts
frontend/src/components/chat/: chatinput.tsx  chatview.tsx  messagelist.tsx  messagesview.tsx
frontend/src/components/nodes/: chat.tsx
notebooks/: basicflow.ipynb  default_team.json  tutorial.ipynb
(+27 files in other folders)
